k8s-manifests/movie-db-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: movie-db
spec:
  replicas: 1
  selector:
    matchLabels:
      app: movie-db
  template:
    metadata:
      labels:
        app: movie-db
    spec:
      containers:
      - name: postgres
        image: postgres:12.1-alpine
        ports:
        - containerPort: 5432
        volumeMounts:
        - name: postgres-storage
          mountPath: /var/lib/postgresql/data
      volumes:
      - name: postgres-storage
        persistentVolumeClaim:
          claimName: postgres-data-movie
---
apiVersion: v1
kind: Service
metadata:
  name: movie-db-service
spec:
  selector:
    app: movie-db
  ports:
  - protocol: TCP
    port: 5432
    targetPort: 5432
